--- a/less/app/global.less
+++ b/less/app/global.less
@@ -6,13 +6,16 @@
     margin-left: 225px;
     background: @mp-content-background;
     padding: @mp-content-padding;
-    overflow-y: scroll;
     z-index: 5;
 	}
 
   #content-tools {
     width: 100%;
     z-index: 10;
+  }
+
+  #content-content {
+    padding-bottom: 25px;
   }
 
   div.content-detail {
