--- a/less/config.less
+++ b/less/config.less
@@ -45,7 +45,7 @@
 
 /* Body */
 
-	@body-background-color: #ffffff;
+	@body-background-color: @grayDark;
 	@body-background-image: ~'';
 	@body-background-repeat: ~'';
 	@body-background-position: ~'';
